larger figure fonts

--- a/violence.html
+++ b/violence.html
@@ -351,7 +351,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h1>Focus on Violence</h1>
 <section id="how-many-prosecutions-were-for-violent-vs.-non-violent-methods-by-ideological-affiliation" class="level3">
 <h3 class="anchored" data-anchor-id="how-many-prosecutions-were-for-violent-vs.-non-violent-methods-by-ideological-affiliation">How many prosecutions were for violent vs.&nbsp;non-violent methods, by ideological affiliation?</h3>
-<p>Then let’s filter for only those to make our visualizations</p>
+<p>Then let’s filter for only those to make our visualizations.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Code</summary>
@@ -470,7 +470,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="violence_files/figure-html/unnamed-chunk-9-1.png" class="img-fluid figure-img" width="1152"></p>
+<p><img src="violence_files/figure-html/unnamed-chunk-9-1.png" class="img-fluid figure-img" width="1056"></p>
 </figure>
 </div>
 </div>
@@ -523,7 +523,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <div class="cell-output-display page-columns page-full">
 <div class="page-columns page-full">
 <figure class="figure page-columns page-full">
-<p class="page-columns page-full"><img src="violence_files/figure-html/unnamed-chunk-10-1.png" class="img-fluid figure-img column-page" width="1344"></p>
+<p class="page-columns page-full"><img src="violence_files/figure-html/unnamed-chunk-10-1.png" class="img-fluid figure-img column-page" width="1248"></p>
 </figure>
 </div>
 </div>
@@ -583,7 +583,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="violence_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid figure-img" width="1152"></p>
+<p><img src="violence_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid figure-img" width="1056"></p>
 </figure>
 </div>
 </div>
